--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -56,6 +56,15 @@
   <string name="CALL_CAMERA_NAME">Doorbell</string>
   <string name="CALL_SUCCESS_OPEN_SAVE">Premere il tasto di chiamata per attivare la modalità di risparmio energetico dopo la chiamata</string>
   <string name="CAMERA">Camera</string>
+  <string name="CAMERA4G_CONNECTAP_BUTTON">Lampeggiante senza carta SIM</string>
+  <string name="CAMERA4G_CONNECTAP_GUIDE1">Dopo l\'accensione, attendere che il led giallo lampeggi</string>
+  <string name="CAMERA4G_CONNECTAP_GUIDE2">Assicurarsi che il dispositivo senza una carta SIM</string>
+  <string name="CAMERA4G_INSERTSIM_BUTTON">Carta SIM inserita</string>
+  <string name="CAMERA4G_INSERTSIM_DETECTING">Rilevamento &#8230;</string>
+  <string name="CAMERA4G_INSERTSIM_GUIDE1">Inserire la carta SIM nell\'apposito slot</string>
+  <string name="CAMERA4G_INSERTSIM_GUIDE2">Assicurarsi che la carta SIM è disponibile</string>
+  <string name="CAMERA4G_NOSIM">Nessuna scheda SIM disponibile</string>
+  <string name="CAMERA_4G">Camera (4G versione)</string>
   <string name="CANCEL">Annulla</string>
   <string name="CARRY_ON">Continuare</string>
   <string name="CHANGE_EMAIL">Cambio E-mail</string>
@@ -468,6 +477,7 @@
   <string name="MINUTE">M</string>
   <string name="MINUTE_Cloud">minuti</string>
   <string name="MOBILE_DATA">rete dati mobile</string>
+  <string name="MOBILE_NETWORK">Rete mobile</string>
   <string name="MOBILE_TIPS">Quando ON, il dispositivo utilizza preferibilmente la rete WiFi</string>
   <string name="MODEL">Modello</string>
   <string name="MODIFY_DOOR_PSW">Modificare la password di porta</string>
