--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -56,6 +56,15 @@
   <string name="CALL_CAMERA_NAME">Chuông cửa</string>
   <string name="CALL_SUCCESS_OPEN_SAVE">Bấm phím gọi điện thoại để bật chế độ tiết kiệm điện sau khi cuộc gọi thành công</string>
   <string name="CAMERA">Camera</string>
+  <string name="CAMERA4G_CONNECTAP_BUTTON">Nháy không có thẻ SIM</string>
+  <string name="CAMERA4G_CONNECTAP_GUIDE1">Sau khi bật, chờ đèn vàng nhấp nháy</string>
+  <string name="CAMERA4G_CONNECTAP_GUIDE2">Đảm bảo thiết bị không có thẻ SIM</string>
+  <string name="CAMERA4G_INSERTSIM_BUTTON">Chèn thẻ SIM</string>
+  <string name="CAMERA4G_INSERTSIM_DETECTING">Đang phát hiện &#8230;</string>
+  <string name="CAMERA4G_INSERTSIM_GUIDE1">Lắp thẻ SIM vào khe thẻ</string>
+  <string name="CAMERA4G_INSERTSIM_GUIDE2">Đảm bảo có sẵn thẻ SIM</string>
+  <string name="CAMERA4G_NOSIM">Không có sẵn thẻ SIM</string>
+  <string name="CAMERA_4G">Camera (4G Version)</string>
   <string name="CANCEL">Huỷ</string>
   <string name="CARRY_ON">Tiếp tục</string>
   <string name="CHANGE_EMAIL">Đổi Email</string>
@@ -468,6 +477,7 @@
   <string name="MINUTE">M</string>
   <string name="MINUTE_Cloud">Phút</string>
   <string name="MOBILE_DATA">mạng dữ liệu di động</string>
+  <string name="MOBILE_NETWORK">Mạng điện thoại di động</string>
   <string name="MOBILE_TIPS">Khi bật tính năng này, thiết bị sẽ ưu tiên sử dụng sóng 3G/4G thay vì WiFi</string>
   <string name="MODEL">Model</string>
   <string name="MODIFY_DOOR_PSW">Sửa đổi mật khẩu cửa</string>
